--- a/about/style.css
+++ b/about/style.css
@@ -15,10 +15,10 @@ nav a {
 }
 
 .square {
-    position: absolute;
+    position: fixed;
     background-color: white;
-    width: 3px;
-    height: 3px;
+    width: 2.5px;
+    height: 2.5px;
 }
 
 .title {
