--- a/team/style.css
+++ b/team/style.css
@@ -48,11 +48,10 @@ a {
 }
 
 .square {
-    position: absolute;
+    position: fixed;
     width: 2px;
     height: 2px;
     background-color: white;
-    opacity: 1;
 }
 
 h3 {
