--- a/style.css
+++ b/style.css
@@ -2,7 +2,27 @@ body {
     background-color: black;
     color: white;
     font-family: Arial, sans-serif;
+
 }
+
+a {
+    color: #fff;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.title {
+    font-size: 85px;
+}
+
+urlFont1 {
+    color: #fff;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+/*
+----------------------------------------------
 
 header {
     text-align: right;
@@ -22,7 +42,7 @@ nav a {
 }
 
 .title {
-    font-size: 100px; /* 48 */
+    font-size: 100px; 48 
     color: #fff;
     margin: 0;
 }
@@ -42,5 +62,7 @@ a {
 }
 
 p {
-    margin-left: 10px;
+    margin-left: 10px; 
 }
+
+*/
