--- a/company/style.css
+++ b/company/style.css
@@ -1,3 +1,4 @@
+/*
 body {
     background-color: black;
     color: white;
@@ -22,7 +23,7 @@ nav a {
 }
 
 .title {
-    font-size: 100px; /* 48 */
+    font-size: 100px; 48 
     color: #fff;
     margin: 0;
 }
@@ -53,3 +54,5 @@ h3 {
     margin-right: 10px;
     margin-bottom: -15px;
 }
+
+*/
