--- a/story/style.css
+++ b/story/style.css
@@ -1,3 +1,5 @@
+/*
+
 body {
     background-color: black;
     color: white;
@@ -22,7 +24,7 @@ nav a {
 }
 
 .title {
-    font-size: 100px; /* 48 */
+    font-size: 100px; 48
     color: #fff;
     margin: 0;
 }
@@ -44,3 +46,5 @@ a {
 p {
     margin-left: 10px;
 }
+
+*/
