--- a/team/style.css
+++ b/team/style.css
@@ -1,3 +1,5 @@
+/*
+
 body {
     background-color: black;
     color: white;
@@ -16,7 +18,7 @@ nav a {
 }
 
 .title {
-    font-size: 100px; /* 48 */
+    font-size: 100px; 48
     color: #fff;
     margin: 0;
 }
@@ -65,3 +67,5 @@ h4 {
     margin-top: 30px;
     font-weight: 100;
 }
+
+*/
