--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ a {
 }
 
 .title {
-    font-size: 85px;
+    font-size: 140px;
 }
 
 urlFont1 {
@@ -20,6 +20,17 @@ urlFont1 {
     font-weight: bold;
     text-decoration: underline;
 }
+
+.square {
+    position: absolute;
+    width: 3.5px;
+    height: 3.5px;
+    background-color: white;
+}
+
+
+
+
 
 /*
 ----------------------------------------------
